# az_quotas_compare

./: az_quotas_compare.py  locations.all.txt  locations.txt  providers.all.txt  providers.txt  pyproject.toml
